sters apostrof PHP

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<li style="color: red;"> HMTL </li>
 	<li style="color: green;" > CSS </li>
 	<li style="color: blue;" > JavaScript </li>
-	<li style="color:aqua;"> PHP </li>"
+	<li style="color:aqua;"> PHP </li>
 </ul>
 
 <p id="date-time"></p>
